# Django_hw

./: data.json  postgres  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: base.html  contacts.html  index.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: tags.py
config/: settings.py
managment/commands/: fill.py
