[tool.poetry]
name = "django-hw"
version = "0.1.0"
description = ""
authors = ["BersUmar <umar-03@inbox.ru>"]
readme = "README.md"
packages = [{include = "django_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
